# queuelab

./: .gitignore  AGENT.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: architecture.md  build_log.md  experiment_log.md  findings.md  release_notes.md  reproducibility.md
experiments/configs/: exp_001_happy_path_10k.yaml  exp_002_worker_crash.yaml  exp_004_poison_messages.yaml  exp_005_db_slowdown.yaml  exp_006_sqs_visibility_timeout.yaml  exp_007_rabbitmq_prefetch.yaml  exp_008_postgres_concurrency.yaml  exp_009_retry_storm.yaml
infra/localstack/: init-sqs.sh
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/rabbitmq/: definitions.json
queuelab/: __init__.py  __main__.py  cli.py  config.py  db.py  metrics.py
queuelab/dataset/: __init__.py  download_gharchive.py  inspect.py  schema.py
queuelab/experiments/: __init__.py  runner.py
queuelab/queues/: __init__.py  base.py  postgres_queue.py  rabbitmq.py  sqs.py
queuelab/reporting/: __init__.py  charts.py  export.py  summarize.py
queuelab/workers/: __init__.py  direct.py  queued.py
results/summaries/: exp002-postgres-crash-unique-001.json  exp002-rabbitmq-crash-unique-001.json  exp002-sqs-crash-unique-001.json  exp004-postgres-poison-001.json  exp004-rabbitmq-poison-001.json  exp004-sqs-poison-001.json  happy-10k-postgres-001.json  happy-10k-rabbitmq-001.json  happy-10k-sqs-001.json  smoke-direct-db-slowdown-001.json  v02-dbdelay-postgres-0.json  v02-dbdelay-postgres-100.json  v02-dbdelay-postgres-25.json  v02-dbdelay-sqs-0.json  (+17 more)
tests/: test_dataset_schema.py
(+2 files in other folders)
