[project]
name = "queuelab"
version = "0.1.0"
description = "Queue backend reliability experiments for RabbitMQ, SQS, and Postgres queues"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.11",
    "pika>=1.4.0",
    "prometheus-client>=0.25.0",
    "psycopg[binary]>=3.3.4",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
